--- a/example/ios/AnimatedAccordionExample.xcodeproj/xcshareddata/xcschemes/AnimatedAccordionExample.xcscheme
+++ b/example/ios/AnimatedAccordionExample.xcodeproj/xcshareddata/xcschemes/AnimatedAccordionExample.xcscheme
@@ -22,6 +22,24 @@
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
+   <TestAction
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "AnimatedAccordionExampleTests.xctest"
+               BlueprintName = "AnimatedAccordionExampleTests"
+               ReferencedContainer = "container:AnimatedAccordionExample.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
+   </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
