--- a/example/package.json
+++ b/example/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "react-native-animated-accordion-example",
-  "description": "Example app for react-native-animated-accordion",
+  "name": "AnimatedAccordionExample",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pods": "pod-install --quiet",
-    "postinstall": "patch-package"
+    "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "@types/react": "17.0.2",
-    "@types/react-native": "0.68.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/runtime": "^7.21.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "metro-react-native-babel-preset": "0.76.3"
   }
 }
