--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animated-accordion",
-  "version": "0.1.1",
-  "description": "React Native Component for creating animated accordion, collapsible, toggles etc",
+  "version": "1.1.0",
+  "description": "test",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -13,24 +13,31 @@
     "android",
     "ios",
     "cpp",
-    "react-native-animated-accordion.podspec",
+    "*.podspec",
     "!lib/typescript/example",
-    "!android/build",
     "!ios/build",
+    "!android/build",
+    "!android/gradle",
+    "!android/gradlew",
+    "!android/gradlew.bat",
+    "!android/local.properties",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__"
+    "!**/__mocks__",
+    "!**/.*"
   ],
   "scripts": {
     "test": "jest",
-    "typescript": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepare": "bob build",
+    "prepack": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
-    "bootstrap": "yarn example && yarn && yarn example pods"
+    "bootstrap": "yarn example && yarn install && yarn example pods",
+    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build"
   },
   "keywords": [
+    "react",
     "react-native",
     "ios",
     "android",
@@ -38,7 +45,13 @@
     "accordion",
     "collapsible",
     "react native collapsible",
-    "react native accordion"
+    "react native accordion",
+    "react-component",
+    "react-native-component",
+    "mobile",
+    "ui",
+    "collapse",
+    "toggle"
   ],
   "repository": "https://github.com/Waseem6409/react-native-animated-accordion",
   "author": "Waseem Munir <waseem6409@gmail.com> (https://github.com/Waseem6409)",
@@ -51,30 +64,27 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.7",
-    "@babel/eslint-parser": "^7.18.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@react-native-community/eslint-config": "^3.0.2",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.68.0",
-    "@types/react-native-vector-icons": "^6.4.12",
-    "commitlint": "^17.0.2",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@evilmartians/lefthook": "^1.3.10",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@types/jest": "^29.5.1",
+    "@types/react": "~18.2.0",
+    "@types/react-native": "0.71.6",
+    "commitlint": "^17.6.1",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-builder-bob": "^0.18.3",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-vector-icons": "^9.2.0",
-    "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "react": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-builder-bob": "^0.20.4",
+    "release-it": "^15.10.1",
+    "typescript": "^5.0.4"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -83,8 +93,12 @@
     "react": "*",
     "react-native": "*",
     "react-native-reanimated": ">=2.0.0",
-    "react-native-vector-icons": "*"
+    "react-native-svg": ">=13.9.0"
   },
+  "engines": {
+    "node": ">= 16.0.0"
+  },
+  "packageManager": "^yarn@1.22.15",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
@@ -116,7 +130,6 @@
   },
   "eslintConfig": {
     "root": true,
-    "parser": "@babel/eslint-parser",
     "extends": [
       "@react-native-community",
       "prettier"
@@ -160,7 +173,7 @@
     ]
   },
   "dependencies": {
-    "react-native-reanimated": "^2.10.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-reanimated": "^3.1.0",
+    "react-native-svg": "^13.9.0"
   }
 }
