--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-animated-accordion",
   "version": "1.1.0",
-  "description": "test",
+  "description": "React Native Component for creating animated accordion, collapsible, toggles etc",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
