--- a/.github/workflows/version_change.yml
+++ b/.github/workflows/version_change.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
 
-permissions: 
+permissions:
   contents: write
 
 jobs:
@@ -62,7 +62,7 @@ jobs:
       - name: Commit changes (if version updated)
         if: steps.check-version.outputs.needs_update == 'true'
         run: |
-          git push origin main
+          git push origin master
 
       - name: Install dependencies
         run: yarn
